criado componente signup

--- a/src/app/modules/core/pages/home/home.component.html
+++ b/src/app/modules/core/pages/home/home.component.html
@@ -5,7 +5,7 @@
     alunos, aulas e assinaturas em uma única plataforma.
   </p>
   <div class="welcome-buttons">
-    <button mat-raised-button color="primary" routerLink="/dashboard">
+    <button mat-raised-button color="primary" routerLink="/signup">
       Começar Agora
     </button>
     <button mat-stroked-button routerLink="/about">Saiba Mais</button>
@@ -85,7 +85,7 @@
     Junte-se a centenas de professores que já usam o QuadraGo para gerenciar
     suas quadras.
   </p>
-  <button mat-raised-button color="primary" routerLink="/dashboard">
+  <button mat-raised-button color="primary" routerLink="/login">
     Acessar Plataforma
   </button>
 </section>
