--- a/src/app/modules/core/pages/login/login.component.html
+++ b/src/app/modules/core/pages/login/login.component.html
@@ -59,14 +59,14 @@
 
       <div class="social-buttons">
         <button mat-stroked-button class="social-button google">
-          <mat-icon>google</mat-icon> Google
+          <mat-icon>g_mobiledata_badge</mat-icon> Google
         </button>
         <button mat-stroked-button class="social-button facebook">
           <mat-icon>facebook</mat-icon> Facebook
         </button>
       </div>
 
-      <p class="signup-link">Não tem uma conta? <a href="#">Crie conta</a></p>
+      <p class="signup-link">Não tem uma conta? <a routerLink="/signup">Crie conta</a></p>
       <!-- Novo botão Voltar ao Início -->
       <button mat-button routerLink="/" class="back-button">
         ← Voltar ao Início
