--- a/src/app/layouts/public-layout/public-layout.component.html
+++ b/src/app/layouts/public-layout/public-layout.component.html
@@ -2,7 +2,7 @@
   <mat-toolbar color="primary" class="header-toolbar">
     <div class="brand-container">
       <!-- <img src="/assets/imagens/logo2.png" alt="QuadraGo Logo" class="logo"> -->
-      <span class="title">QuadraGo</span>
+      <span class="title" routerLink="/">QuadraGo</span>
       <span class="subtitle">Gestão Esportiva</span>
     </div>
     <span class="spacer"></span>
