--- a/src/app/layouts/dashboard-layout/dashboard-layout.component.scss
+++ b/src/app/layouts/dashboard-layout/dashboard-layout.component.scss
@@ -1,13 +1,128 @@
-aside {
-  width: 200px;
-  background: #1976d2;
-  color: white;
-  height: 100vh;
-  position: fixed;
-  padding: 1rem;
+.dashboard-header {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 10px 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background-color: white;
 }
 
-.content {
-  margin-left: 200px;
-  padding: 1rem;
+.header-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 1200px;
+}
+
+.title-container {
+  display: flex;
+  align-items: center;
+  gap: 10px; // Espaçamento entre title e subtitle
+}
+
+.title {
+  font-size: 2rem;
+  font-weight: 600;
+  color: #0c2e5b; // Cor para contraste com o fundo primary
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.separator {
+  font-size: 2rem;
+  color: rgba(36, 35, 35, 0.8);
+}
+
+.subtitle {
+  font-size: 1.2rem;
+  font-weight: 300;
+  color: rgba(36, 35, 35, 0.8);
+  padding-left: 1.2rem;
+}
+
+button[mat-button] {
+   transition: all 0.3s ease;
+   border-radius: 4px;
+
+   &:hover {
+     background-color: #14b536;
+     color: white;
+     border-color: #14b536;
+   }
+}
+
+.button-container {
+  display: flex;
+  gap: 10px; // Espaçamento horizontal entre os botões
+  justify-content: flex-end; // Alinha os botões à direita
+  padding: 10px 20px; // Padding interno para o contêiner
+  margin-top: 10px; // Espaçamento acima do contêiner, se necessário
+}
+
+.main-button {
+  min-width: 100px; // Largura mínima para consistência
+  text-transform: none; // Preserva o texto original
+  color: #1976d2; // Cor padrão do texto do botão stroked
+
+  &:hover {
+    background-color: rgba(25, 118, 210, 0.1); // Efeito hover sutil
+  }
+}
+
+.main {
+  background-color: #f9fafc;
+}
+
+.dashboard-content {
+  padding: 20px;
+  min-height: calc(100vh - 64px); // Ajusta para o tamanho do toolbar (64px padrão)
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+// Media Queries para Responsividade
+@media (max-width: 768px) {
+  .dashboard-header {
+    padding: 10px;
+  }
+
+  .header-content {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+  }
+
+  .title-container {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 5px; // Reduz o espaçamento em telas menores
+  }
+
+  .title {
+    font-size: 1.3rem;
+  }
+
+  .subtitle {
+    font-size: 0.8rem;
+  }
+
+  .dashboard-content {
+    padding: 10px;
+  }
+
+  .button-container {
+    flex-direction: column; // Empilha os botões em telas menores
+    gap: 5px; // Reduz o espaçamento vertical
+    align-items: flex-end; // Mantém o alinhamento à direita
+  }
+
+  .main-button {
+    width: 100%; // Ocupa a largura total em telas menores
+  }
 }
