concluido modulo plans, alterações em dashboard-layout

--- a/src/app/layouts/dashboard-layout/dashboard-layout.component.html
+++ b/src/app/layouts/dashboard-layout/dashboard-layout.component.html
@@ -1,14 +1,35 @@
 <mat-toolbar color="primary" class="dashboard-header">
   <div class="header-content">
     <div class="title-container">
-      <span class="title">QuadraGo</span>
+      <span class="title" routerLink="/dashboard">QuadraGo</span>
       <span class="separator">|</span>
-      <span class="subtitle">Painel do Professor</span>
+      <span class="subtitle">{{ subtitle }}</span>
     </div>
+
     <div class="button-container">
-      <button mat-button class="main-button" routerLink="/dashboard">Painel</button>
-      <button mat-button class="main-button" routerLink="/dashboard/students">Alunos</button>
-      <button mat-button (click)="logout()" class="main-button">Sair</button>
+      <ng-container *ngFor="let item of menu">
+        <!-- Botão de NAVEGAÇÃO (tem link) -->
+        <button
+          *ngIf="item.link; else actionBtn"
+          mat-button
+          class="main-button"
+          [routerLink]="item.link"
+          routerLinkActive="active"
+        >
+          {{ item.label }}
+        </button>
+
+        <!-- Botão de AÇÃO (ex.: Sair) -->
+        <ng-template #actionBtn>
+          <button
+            mat-button
+            class="main-button"
+            (click)="onMenuClick(item)"
+          >
+            {{ item.label }}
+          </button>
+        </ng-template>
+      </ng-container>
     </div>
   </div>
 </mat-toolbar>
