--- a/src/app/modules/core/pages/login/login.component.html
+++ b/src/app/modules/core/pages/login/login.component.html
@@ -57,16 +57,19 @@
         <span>OU CONTINUE COM</span>
       </div>
 
-      <div class="social-buttons">
+      <div class="social-login">
         <button mat-stroked-button class="social-button google">
-          <mat-icon>g_mobiledata_badge</mat-icon> Google
+          <i class="fab fa-google"></i> Entrar com Google
         </button>
+
         <button mat-stroked-button class="social-button facebook">
-          <mat-icon>facebook</mat-icon> Facebook
+          <i class="fab fa-facebook-f"></i> Entrar com Facebook
         </button>
       </div>
 
-      <p class="signup-link">Não tem uma conta? <a routerLink="/signup">Crie conta</a></p>
+      <p class="signup-link">
+        Não tem uma conta? <a routerLink="/signup">Crie conta</a>
+      </p>
       <!-- Novo botão Voltar ao Início -->
       <button mat-button routerLink="/" class="back-button">
         ← Voltar ao Início
