--- a/src/app/modules/teacher/pages/students/students.component.scss
+++ b/src/app/modules/teacher/pages/students/students.component.scss
@@ -27,6 +27,14 @@
     gap: 6px;
     border-radius: 10px;
     padding: 10px 14px;
+    transition: all 0.3s ease;
+    border-radius: 4px;
+
+    &:hover {
+      background-color: #14b536;
+      color: white;
+      border-color: #14b536;
+    }
   }
 }
 
@@ -233,6 +241,26 @@
 }
 
 .status-pill {
+  display: inline-flex;
+  align-items: center;
+  padding: 4px 10px;
+  border-radius: 999px;
+  font-size: 0.85rem;
+  font-weight: 400;
+
+  &.active {
+    background: #ecfdf5;
+    color: #16a34a;
+    border: 1px solid #bbf7d0;
+  }
+  &.inactive {
+    background: #fef2f2;
+    color: #ef4444;
+    border: 1px solid #fecaca;
+  }
+}
+
+.status-payment {
   display: inline-flex;
   align-items: center;
   padding: 4px 10px;
