--- a/src/app/modules/core/pages/login/login.component.scss
+++ b/src/app/modules/core/pages/login/login.component.scss
@@ -104,28 +104,44 @@ h2 {
   }
 }
 
-.social-buttons {
+.social-login {
   display: flex;
-  gap: 10px;
-  justify-content: center;
+  flex-direction: column;
+  gap: 12px;
+  margin-top: 16px;
 }
 
 .social-button {
   display: flex;
   align-items: center;
-  gap: 5px;
-  width: 100%;
-  max-width: 180px;
-}
+  justify-content: center;
+  font-weight: 500;
+  text-transform: none;
 
-.google {
-  background-color: #fff;
-  border-color: #ddd;
-}
+  i {
+    margin-right: 8px;
+    font-size: 18px;
+  }
 
-.facebook {
-  background-color: #fff;
-  border-color: #ddd;
+  &.google {
+    color: #db4437;
+    border-color: #db4437;
+
+    &:hover {
+      background-color: #db4437;
+      color: white;
+    }
+  }
+
+  &.facebook {
+    color: #1877f2;
+    border-color: #1877f2;
+
+    &:hover {
+      background-color: #1877f2;
+      color: white;
+    }
+  }
 }
 
 .signup-link {
