criado student e student-form. Atualização basicas

--- a/src/app/layouts/dashboard-layout/dashboard-layout.component.html
+++ b/src/app/layouts/dashboard-layout/dashboard-layout.component.html
@@ -15,6 +15,7 @@
           class="main-button"
           [routerLink]="item.link"
           routerLinkActive="active"
+          [routerLinkActiveOptions]="item.exact ? { exact: true } : { exact: false }"
         >
           {{ item.label }}
         </button>
